# api/controllers/getDb.js
@@ -1,19 +1,21 @@
 const fs = require("fs");
 const path = require("path");
 
-// Définir le chemin vers le fichier db.json
-const dbPath = path.join(__dirname, "../../db.json");
+const db = path.join(__dirname, "../../db.json");
+console.log("Path to db.json: ", db);  // Vérifie que le chemin est correct
 
 module.exports = {
-  getDbData: (_, res) => {
-    // Lire le fichier db.json
-    fs.readFile(dbPath, "utf8", (err, data) => {
+  getDbData: (req, res) => {
+    console.log("ca passa"); // Vérifie si cette ligne est exécutée
+    fs.readFile(db, "utf8", (err, data) => {
       if (err) {
         return res.status(500).json({ message: "Internal Server Error" });
       }
-      // Retourner les données du fichier JSON
-      res.status(200).json(JSON.parse(data));
+      res.status(200).json(JSON.parse(data)); // Retourne les données du fichier JSON
     });
   }
 };
+
+
+
 
